--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
-.para {
-  font-size: 20px;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.para,
+.small-para {
+  color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
 
@@ -8,14 +13,30 @@
   font-weight: 800;
 }
 
-#confirm-button {
+.para {
+  font-size: 22px;
+}
+
+#confirm-button.confirm {
   background: green;
   color: white;
   font-weight: bold;
+} 
+
+#cancel.button {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 20px;
 }
 
 .text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
+}
+
+div.text {
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 100;
 }
